# Dual-Wheel-Balancing-Drone

./: CMakeLists.txt  README.md  peopleDetection.cpp
BLE/: Application.py  Readme.md  detection_server.py  index.html
BLE/templates/: index.html  index1.html  scan.html
Drone Frame/: Frame Model 3.0.SLDPRT
PID Control/: pid_controller_cpp  pid_controller_head
PeopleDetection/: CMakeLists.txt  Camtest.cpp  README.md  TESTING.md  peopleDectionWeb.cpp  peopleDetection.cpp  peopleDetectionTest.cpp  peopleDetectionTest1.cpp  peopleDetectionWebSocket.cpp
PeopleDetection/webstream/: CMakeLists.txt  peopleDetectionStream.cpp  peopleDetectionTest1.cpp
drone-movement-control/: C++.h  CMakeLists.txt  README.md  callback_test.cpp  callback_test.h  callback_test_main.cpp  config.h  drone_controller.cpp  drone_controller.h  drone_status_interface.cpp  drone_status_interface.h  read-gyro-accel
drone-movement-control/inc/: ADC.hpp  Balance.hpp  CallbackInterface.hpp  Control.hpp  DataScope_DP.hpp  Delay.hpp  EXTI.hpp  Encoder.hpp  EventSystem.hpp  Filter.hpp  GPIOHelper.hpp  I2CHelper.hpp  I2CSlave.hpp  IOI2C.hpp  KalmanFilter.hpp  Key.hpp  LED.hpp  LatencyMonitor.hpp  MPU6050.hpp  MemoryManager.hpp  Motor.hpp  OLED.hpp  RealTimeThread.hpp  Show.hpp  System.hpp  TestFramework.hpp  Timer.hpp  USART.hpp  USART3.hpp  Ultrasonic.hpp  core_cm3.h  oled_fonts.hpp  oledfont.hpp
drone-movement-control/inc/control_classes/: MotorController.h
drone-movement-control/include/: callback_test.h  encoder.h  gpio_interface.h  i2c_interface.h  motor_controller.h  mpu6050.h
drone-movement-control/src/: ADC.cpp  Balance.cpp  Control.cpp  DataScope_DP.cpp  Delay.cpp  EXTI.cpp  Encoder.cpp  EventSystem.cpp  Filter.cpp  GPIOHelper.cpp  GPIOHelper_stub.cpp  I2CHelper.cpp  I2CSlave.cpp  IOI2C.cpp  KalmanFilter.cpp  Key.cpp  LED.cpp  LatencyMonitor.cpp  MPU6050.cpp  MemoryManager.cpp  Motor.cpp  OLED.cpp  PWM.cpp  RealTimeThread.cpp  Show.cpp  System.cpp  TestFramework.cpp  Timer.cpp  USART.cpp  USART3.cpp  Ultrasonic.cpp  encoder.cpp  gpio_interface.cpp  i2c_interface.cpp  main.cpp  motor_controller.cpp  mpu6050.cpp  oled_fonts.cpp
drone-movement-control/src/cobtrol_classes/: PIDController.hpp  PIDcontroller.cpp
drone-movement-control/src/control_classes/: MotorController.cpp
drone-movement-control/src/dmp/: inv_mpu.cpp  inv_mpu_dmp_motion_driver.cpp
drone-movement-control/tests/: test_balance_system.cpp  test_main.cpp
home/pu/Desktop/Dual-Wheel-Balancing-Drone/PeopleDetection/: peopleDetectionTest.cpp
